# Pyferris

./: Cargo.toml  FINAL_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  TODO_IMPLEMENTATION_SUMMARY.py  final_performance_validation.py  performance_test.py  pyproject.toml  test_ide_support.py  test_smart_cache.py  test_todo_features.py  validate_optimizations.py  verify_todo_features.py
.github/workflows/: maturin-generate.yml  release-CI.yml
docs/: ADVANCED_FEATURES_DOCUMENTATION.md  PROFILING_DOCUMENTATION.md  PROFILING_QUICK_REFERENCE.md  README.md  api_reference.md  async_operations.md  changelog.md  io.md  io_api_reference.md  io_module.md  io_tutorial.md  io_user_guide.md  smart_cache.md  virtual_threads.md
examples/: auto_gc_examples.py  io_examples.py  level3_examples.py  level5_examples.py  smart_cache_examples.py
pyferris/: __init__.py  advanced.py  async_ops.py  cache.py  concurrent.py  config.py  core.py  distributed.py  executor.py  fault_tolerance.py  gc.py  io.py  memory.py  pipeline.py  profiling.py  safe_thread.py  scheduler.py  shared_memory.py  virtual_thread.py
pyferris/io/: __init__.py  csv.py  file_reader.py  file_writer.py  json.py  parallel_io.py  simple_io.py
src/: error.rs  lib.rs
src/advanced/: mod.rs  (+1 more)
tests/: README.md  test_async.py  test_auto_gc.py  test_cache.py  test_concurrent.py  test_distributed.py  test_io.py  test_level4.py  test_level5.py  test_memory.py  test_parallel_io.py  test_pipeline.py  test_schedulers.py  test_shared_memory.py  test_simple_io.py  test_virtual_threads.py
(+36 files in other folders)
